@@ -2953,6 +2953,7 @@ A0: 00000D88 A1: 00000D88 A2: 00006906 A3: 00000668 A4: 00000012 A5: 00000670 A6
           		}
           		
           		puntero_origen++;
+				  longitud--;
           	}
 
           	buffer_mensaje[i]=0;
@@ -2987,6 +2988,51 @@ A0: 00000D88 A1: 00000D88 A2: 00006906 A3: 00000668 A4: 00000012 A5: 00000670 A6
 
 
         }
+
+		else {
+			//Pruebas debug mensaje. Parece que solo muestra correctamente texto de los canales inferiores
+			
+          	unsigned int puntero_origen;
+
+			
+			puntero_origen=ql_get_a1_after_trap_4();
+			
+
+          	//Mostrar parte del mensaje enviado en SSTRG
+          	//unsigned int puntero_destino=m68k_get_reg(NULL,M68K_REG_A1)+m68k_get_reg(NULL,M68K_REG_A6);
+          	char buffer_mensaje[256];
+          	int longitud=m68k_get_reg(NULL,M68K_REG_D2);
+          	if (longitud>32) longitud=32;
+
+			//printf ("Debugging message sent. longitud=%d\n",longitud);
+
+          	int i=0;
+          	char byte_leido;
+
+          	while (longitud) {
+          		byte_leido=ql_readbyte(puntero_origen);
+          		if (byte_leido>=32 && byte_leido<=126) {
+          			buffer_mensaje[i]=byte_leido;
+          			i++;
+          		}
+          		else {
+          			sprintf(&buffer_mensaje[i],"%02XH ",byte_leido);
+
+          			i+=4;
+          		}
+          		
+          		puntero_origen++;
+				longitud--;
+          	}
+
+          	buffer_mensaje[i]=0;
+
+          	debug_printf (VERBOSE_PARANOID,"IO.SSTRG - message sent: %s",buffer_mensaje);
+
+			//printf ("message sent: %s\n",buffer_mensaje);
+          
+
+		}
     }
 
 
