@@ -21,6 +21,7 @@ Fixed QL bugs:
 -Fixed using QL system calls and A6 pointer offset used after previous Trap was not 4
 -Fixed system call FS.HEADR
 -Fixed system call IO.FSTRG
+-Fixed possible hang calling IO.SSTRG
 
 Fixed segfaults when changing machines and having ZX Desktop windows opened
 Fixed easter egg anc cyrillic characters
